--- a/USF_v2/app/src/main/res/layout/activity_main.xml
+++ b/USF_v2/app/src/main/res/layout/activity_main.xml
@@ -8,17 +8,25 @@
     tools:context=".MainActivity">
 
     <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="182dp"
+        android:layout_height="110dp"
+        app:srcCompat="@mipmap/usf_logo_round"
+        android:layout_alignTop="@id/imageView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="75dp"/>
+
+    <ImageView
         android:id="@+id/imageView"
         android:layout_width="664dp"
-        android:layout_height="967dp"
-        />
+        android:layout_height="967dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@id/imageView"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="448dp"
+        android:layout_marginBottom="524dp"
         android:text="University Society Finder"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
