--- a/USF_v2/app/src/main/res/layout/activity_main_menu.xml
+++ b/USF_v2/app/src/main/res/layout/activity_main_menu.xml
@@ -2,8 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:background="#AF8312"
     tools:context=".mainMenu">
 
@@ -11,6 +11,28 @@
         android:id="@+id/imageView"
         android:layout_width="664dp"
         android:layout_height="967dp" />
+
+    <ImageButton
+        android:id="@+id/imageButton2"
+        android:layout_width="42dp"
+        android:layout_height="42dp"
+        android:layout_alignBottom="@id/imageView"
+        android:layout_marginStart="316dp"
+        android:layout_marginLeft="316dp"
+        android:layout_marginBottom="351dp"
+        android:background="#00FFFFFF"
+        app:srcCompat="@android:drawable/ic_menu_info_details" />
+
+    <ImageButton
+        android:id="@+id/imageButton3"
+        android:layout_width="42dp"
+        android:layout_height="42dp"
+        android:layout_alignBottom="@id/imageView"
+        android:layout_marginStart="316dp"
+        android:layout_marginLeft="316dp"
+        android:layout_marginBottom="245dp"
+        android:background="#00FFFFFF"
+        app:srcCompat="@android:drawable/ic_menu_info_details" />
 
     <Button
         android:id="@+id/button2"
@@ -52,10 +74,11 @@
         android:id="@+id/imageView3"
         android:layout_width="182dp"
         android:layout_height="110dp"
-        app:srcCompat="@mipmap/usf_logo_round"
         android:layout_alignTop="@id/imageView"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="75dp"/>
+        android:layout_marginTop="75dp"
+        app:srcCompat="@mipmap/usf_logo_round" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -70,5 +93,53 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.396" />
+
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="42dp"
+        android:layout_height="42dp"
+        android:layout_alignBottom="@id/imageView"
+        android:layout_marginStart="316dp"
+        android:layout_marginLeft="316dp"
+        android:layout_marginBottom="456dp"
+        android:background="#00FFFFFF"
+        app:srcCompat="@android:drawable/ic_menu_info_details" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/imageView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="417dp"
+        android:background="#817E7E"
+        android:shadowColor="#FFFFFF"
+        android:text=""
+        android:textSize="17sp"
+        android:textStyle="italic" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/imageView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="309dp"
+        android:background="#817E7E"
+        android:text=""
+        android:textSize="17sp"
+        android:textStyle="italic" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/imageView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="201dp"
+        android:background="#817E7E"
+        android:text=""
+        android:textSize="17sp"
+        android:textStyle="italic" />
 
 </RelativeLayout>
