--- a/USF_v2/app/src/main/res/layout/activity_take_quiz.xml
+++ b/USF_v2/app/src/main/res/layout/activity_take_quiz.xml
@@ -5,75 +5,75 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#AF8312"
-    tools:context=".MainActivity">
+    tools:context=".TakeQuiz">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" />
+        android:orientation="vertical"
+        />
 
     <TextView
-        android:id="@+id/textView10"
+        android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/textView10"
+        android:layout_alignBottom="@id/textView4"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="0dp"
         android:gravity="center"
-        android:text="1)  Are you interested in finding out more about different   cultures, or are interested in meeting people with similar beliefs and views?"
-        />
+        android:text="1)  Are you interested in finding out more about different   cultures, or are interested in meeting people with similar beliefs and views?" />
 
     <TextView
-        android:id="@+id/textView11"
+        android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/textView10"
+        android:layout_alignBottom="@id/textView4"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="-90dp"
         android:text="2) Are you interested in sports?" />
 
     <TextView
-        android:id="@+id/textView12"
+        android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/textView10"
+        android:layout_alignBottom="@id/textView4"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="-185dp"
         android:text="3) Are you a creative/artistic person?" />
 
     <TextView
-        android:id="@+id/textView13"
+        android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/textView10"
+        android:layout_alignBottom="@id/textView4"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="-280dp"
+        android:layout_marginBottom="-265dp"
         android:text="4) Do you have a passion for music?" />
 
     <TextView
-        android:id="@+id/textView14"
+        android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/textView10"
+        android:layout_alignBottom="@id/textView4"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="-360dp"
+        android:layout_marginBottom="-350dp"
         android:text="5) Do you like technology?" />
 
     <TextView
-        android:id="@+id/textView15"
+        android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/textView10"
+        android:layout_alignBottom="@id/textView4"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="-450dp"
+        android:layout_marginBottom="-430dp"
         android:text="6) Select all the categories you're interested in" />
 
     <RadioButton
         android:id="@+id/Q1Y"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/textView10"
+        android:layout_alignBottom="@id/textView4"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="-45dp"
         android:text="Yes" />
@@ -82,7 +82,7 @@
         android:id="@+id/Q1N"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/textView10"
+        android:layout_alignBottom="@id/textView4"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="-70dp"
         android:text="No" />
@@ -91,7 +91,7 @@
         android:id="@+id/Q2Y"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/textView10"
+        android:layout_alignBottom="@id/textView4"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="-135dp"
         android:text="Yes" />
@@ -100,7 +100,7 @@
         android:id="@+id/Q2N"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/textView10"
+        android:layout_alignBottom="@id/textView4"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="-160dp"
         android:text="No" />
@@ -109,7 +109,7 @@
         android:id="@+id/Q3Y"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/textView10"
+        android:layout_alignBottom="@id/textView4"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="-225dp"
         android:text="Yes" />
@@ -118,7 +118,7 @@
         android:id="@+id/Q3N"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/textView10"
+        android:layout_alignBottom="@id/textView4"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="-250dp"
         android:text="No" />
@@ -127,82 +127,100 @@
         android:id="@+id/Q4Y"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/textView10"
+        android:layout_alignBottom="@id/textView4"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="-320dp"
+        android:layout_marginBottom="-310dp"
         android:text="Yes" />
 
     <RadioButton
         android:id="@+id/Q4N"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/textView10"
+        android:layout_alignBottom="@id/textView4"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="-345dp"
+        android:layout_marginBottom="-335dp"
         android:text="No" />
 
     <RadioButton
         android:id="@+id/Q5Y"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/textView10"
+        android:layout_alignBottom="@id/textView4"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="-400dp"
+        android:layout_marginBottom="-390dp"
         android:text="Yes" />
 
     <RadioButton
         android:id="@+id/Q5N"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/textView10"
+        android:layout_alignBottom="@id/textView4"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="-425dp"
+        android:layout_marginBottom="-415dp"
         android:text="No" />
 
     <CheckBox
         android:id="@+id/CheckBoxCR"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/textView10"
-        android:layout_marginBottom="-500dp"
-        android:layout_marginLeft="20dp"
+        android:layout_alignBottom="@id/textView4"
+        android:layout_marginBottom="-490dp"
+        android:layout_marginLeft="30dp"
         android:text="Culture / Religion" />
 
     <CheckBox
         android:id="@+id/CheckBoxSport"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/textView10"
-        android:layout_marginBottom="-500dp"
-        android:layout_marginLeft="180dp"
+        android:layout_alignBottom="@id/textView4"
+        android:layout_marginBottom="-490dp"
+        android:layout_marginLeft="190dp"
         android:text="Sport" />
 
     <CheckBox
         android:id="@+id/CheckBoxArt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/textView10"
-        android:layout_marginBottom="-500dp"
-        android:layout_marginLeft="270dp"
+        android:layout_alignBottom="@id/textView4"
+        android:layout_marginBottom="-490dp"
+        android:layout_marginLeft="290dp"
         android:text="Art" />
 
     <CheckBox
         android:id="@+id/CheckBoxMusic"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/textView10"
-        android:layout_marginBottom="-535dp"
-        android:layout_marginLeft="100dp"
+        android:layout_alignBottom="@id/textView4"
+        android:layout_marginBottom="-520dp"
+        android:layout_marginLeft="105dp"
         android:text="Music" />
 
     <CheckBox
         android:id="@+id/CheckBoxTechnology"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/textView10"
-        android:layout_marginBottom="-535dp"
+        android:layout_alignBottom="@id/textView4"
+        android:layout_marginBottom="-520dp"
         android:layout_marginLeft="200dp"
         android:text="Technology" />
+
+    <Button
+        android:id="@+id/ButtonBack"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/textView4"
+        android:layout_marginBottom="-560dp"
+        android:layout_marginLeft="87.5dp"
+        android:text="Back" />
+
+    <Button
+        android:id="@+id/ButtonContinue"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/textView4"
+        android:layout_marginBottom="-560dp"
+        android:layout_marginLeft="223dp"
+        android:text="Continue" />
 
 
 </RelativeLayout>
